// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkBannerAlert should render correctly 1`] = `
<BpkBannerAlertInner
  animateOnEnter={false}
  animateOnLeave={false}
  bannerClassName={null}
  configuration="none"
  dismissButtonLabel=""
  expanded={false}
  icon={null}
  message="Lorem ipsum dolor sit amet, consectetuer adipiscing elit."
  onDismiss={null}
  onExpandToggle={null}
  show={true}
  toggleButtonLabel={null}
  type="success"
/>
`;

exports[`BpkBannerAlert should render correctly hidden 1`] = `
<BpkBannerAlertInner
  animateOnEnter={false}
  animateOnLeave={false}
  bannerClassName={null}
  configuration="none"
  dismissButtonLabel=""
  expanded={false}
  icon={null}
  message="Lorem ipsum dolor sit amet, consectetuer adipiscing elit."
  onDismiss={null}
  onExpandToggle={null}
  show={false}
  toggleButtonLabel={null}
  type="success"
/>
`;

exports[`BpkBannerAlert should render correctly with custom bannerClassName 1`] = `
<BpkBannerAlertInner
  animateOnEnter={false}
  animateOnLeave={false}
  bannerClassName="custom-banner-class-name"
  configuration="none"
  dismissButtonLabel=""
  expanded={false}
  icon={null}
  message="Lorem ipsum dolor sit amet, consectetuer adipiscing elit."
  onDismiss={null}
  onExpandToggle={null}
  show={true}
  toggleButtonLabel={null}
  type="success"
/>
`;
